--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="canvas.js" defer></script>
 </head>
 <body>
+    <canvas id="skyCanvas"></canvas>
     <canvas id="backgroundCanvas"></canvas>
     <canvas id="characterCanvas"></canvas>
 </body>
