car moved to a different file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animation</title>
     <link rel="stylesheet" href="/global.css">
+    <script src="car.js" defer></script>
     <script src="canvas.js" defer></script>
 </head>
 <body>
