--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="/global.css">
     <script src="car.js" defer></script>
     <script src="canvas.js" defer></script>
+	<style>
+		* {
+			margin: 0;
+			padding: 0;
+		}
+
+		canvas {
+			position: absolute;
+		}
+
+		#backgroundCanvas {
+			/* filter: blur(3px); */
+		}
+	</style>
 </head>
 <body>
     <canvas id="skyCanvas"></canvas>
